Added advanced 3d orbit navigator

--- a/web/index.html
+++ b/web/index.html
@@ -7,6 +7,9 @@
     <!-- Prevent browser from automatically upgrading HTTP to HTTPS -->
     <!-- Note: Do NOT use upgrade-insecure-requests as it forces HTTPS -->
     <meta name="referrer" content="no-referrer-when-downgrade" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
     <title>TLP Network Inc.</title>
   </head>
   <body>
